--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx --watch ./src/server.js"
+    "dev": "tsx --watch --env-file .env ./src/server.js"
   },
   "author": "Jhonata Andrade",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.0.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
-    "@prisma/client": "^6.0.0"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.0",
     "prisma": "^6.0.0",
     "tsx": "^4.19.2",
